--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Circle</title>
+    <title>Patatap Clone</title>
     <link rel="stylesheet" type="text/css" href="patatap.css">
     <script type="text/javascript" src="paper-full.js"></script>
     <script type="text/javascript" src="howler.js"></script>
